# glbaguni

./: .gitattributes  .gitignore  README_PROBLEM_PREVENTION.md  README_news.md  SECURITY.md  example_usage.py  news_summarizer.py  package-lock.json  requirements_news.txt  test_korean_rss_comprehensive.py  test_modules.py  test_new_features.py  test_sources_api.py
glbaguni-backend/: CAPTCHA_USAGE.md  IP_BLOCKER_USAGE.md  MEMORY_MANAGEMENT_GUIDE.md  README.md  README_TESTING.md  REQUEST_LOGGER_USAGE.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_HARDENING_GUIDE.md  docker-compose.redis.yml  env_example.txt  env_template.txt  example_improved_api.py  problem_prevention.py  problem_prevention_results.json  pyproject.toml  pyrightconfig.json  pytest.ini  redis.conf  requirements.txt  run_tests.sh  simple_server.py  startup_guide.md  test_feedback_api.py
glbaguni-backend/backend/: README_OPTIMIZATION.md  README_REFACTORING.md  REFACTORING_COMPLETION.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  __init__.py  async_fetcher.py  async_summarizer.py  config.py  database.py  fetcher.py  history_service.py  main.py  main_backup.py  main_optimized.py  main_refactored.py  models.py  news_aggregator.py  notifier.py  security.py  server_refactored.py  summarizer.py
glbaguni-backend/backend/auth/: validator.py
glbaguni-backend/backend/config/: __init__.py  settings.py
glbaguni-backend/backend/models/: __init__.py  models.py  request_schema.py  response_schema.py
glbaguni-backend/backend/routers/: __init__.py  auth.py  captcha.py  core.py  fetch.py  health.py  history_router.py  ip_management.py  main.py  memory.py  news.py  (+5 more)
glbaguni-backend/tests/: __init__.py  conftest.py  test_fetcher.py  test_ip_blocker.py  test_models.py  test_security.py  test_summarizer.py
(+69 files in other folders)
